--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
         jvmTarget = '1.8'
     }
 }
+def lottieVersion = "3.4.0"
 
 dependencies {
 
@@ -50,4 +51,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "androidx.work:work-runtime-ktx:2.7.1"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
