--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
 
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.7.0-beta01'
 }
